Revert "Fixed logo and column alignment (#321)"
This reverts commit 4ebd955ccc7cd76643ba6418dc0ba257b687a62e.

--- a/app/styles/frame.css
+++ b/app/styles/frame.css
@@ -119,10 +119,6 @@
   padding: 10px 30px 0 0;
 }
 
-.brand img{
-  height: 30px;
-}
-
 .brand span{
   font-size:12px;
   line-height: 14px;
